# heineken

./: README.md  experiment1_without_temporal.py  experiment2_with_temporal.py  install_dependencies.sh  main.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: Heineken - Data Science Use Case 3.csv
heineken.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
models/: feature_cols.txt  preprocessor.joblib
notebooks/: notebook.ipynb
notebooks/catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/analysis/: __init__.py  amstel_analysis.py  data_loader.py  data_preprocessor.py  eda_analyzer.py  feature_engineer.py  model_explainer.py  model_trainer.py  results_visualizer.py
