[project]
name = "heineken"
version = "0.1.0"
description = "Heineken Data Science Use Case - Beer Color Prediction with XAI"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.14.1",
    "lime>=0.2.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
]

[project.scripts]
heineken-predict = "src.color_predictor:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

